Copyright (C) 2019 Alpha Griffin
@%@~LICENSE~@%@

saw_070919_1 - Organizing the code into separate files; no new features.

saw_070719_4 - Using cursor color as well since inverse mode wasn't working on my configuration.

saw_070719_3 - Command mode working on Windows now.

saw_070719_2 - Command mode and quit command. Try using termcolor for inverse video on Windows.

saw_070719_1 - Cursor movement with the h, j, k, and l keys.

saw_070619_4 - Get terminal size.

saw_070619_3 - Clear the screen.

saw_070619_2 - Beginning keyboard input.

saw_070619_1 - First commit for vipy.
